---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021-06-07
  Features:
    - Added "off" color option, which disables the indicator for that status (thanks justarandomgeek!)
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2021-06-07
  Features:
    - Initial release