@@ -23,6 +23,11 @@ constants.default_size = "small"
 
 constants.horizontal_position = 0.3
 
+constants.ignored_entities = {
+  ["se-condenser-turbine"] = true,
+  ["se-core-miner"] = true,
+}
+
 constants.sizes = {
   small = 0.15,
   medium = 0.2,
