@@ -1,7 +1,12 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: ????
+  Features:
+    - Added an internal entity blacklist
   Changes:
+    - Removed the indicator from SE condenser turbines
+  Bugfixes:
+    - Fixed SE core mining drills showing two overlapping indicators
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2021-06-07
